[gd_scene load_steps=6 format=3 uid="uid://7y23n5ui2rpc"]

[ext_resource type="Script" uid="uid://oehukq65ampq" path="res://Scripts/pause/pause_menu.gd" id="1_c0l7d"]
[ext_resource type="Script" uid="uid://diaj6y7n7r8j4" path="res://Scripts/pause/options_manager.gd" id="2_0b5ob"]
[ext_resource type="AudioStream" uid="uid://24xy1jj4m0iq" path="res://assets/music/PauseMenu.ogg" id="2_b2xdw"]
[ext_resource type="Curve" uid="uid://cj84un7q6tinf" path="res://UI/volumeCurve.tres" id="2_pqlge"]
[ext_resource type="AudioStream" uid="uid://lh7osmq5tcvc" path="res://assets/sfx/GUN_SOUND_I_THINGK.mp3" id="3_7bqeo"]

[node name="Pause menu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c0l7d")
volumeCurve = ExtResource("2_pqlge")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.337255)
metadata/_edit_lock_ = true

[node name="OptionsManager" type="Control" parent="."]
process_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_0b5ob")
volumeCurve = ExtResource("2_pqlge")

[node name="Save Interval" type="Timer" parent="OptionsManager"]
one_shot = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -207.0
offset_top = 2.0
offset_right = 207.0
offset_bottom = 148.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 106
bbcode_enabled = true
text = "[center][color=lightblue]Pau[color=pink]sed"

[node name="AudioControls" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterVolumeSlider" type="HSlider" parent="AudioControls"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 181.0
offset_right = 104.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0

[node name="ValueMaster" type="Label" parent="AudioControls/MasterVolumeSlider"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -11.0
offset_right = 99.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
text = "100"

[node name="Label" type="Label" parent="AudioControls/MasterVolumeSlider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -15.5
offset_right = -4.0
offset_bottom = 12.5
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Master"

[node name="MusicVolumeSlider" type="HSlider" parent="AudioControls"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 201.0
offset_right = 104.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0

[node name="ValueMusic" type="Label" parent="AudioControls/MusicVolumeSlider"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -11.0
offset_right = 99.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
text = "100"

[node name="Label" type="Label" parent="AudioControls/MusicVolumeSlider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -15.5
offset_right = -11.0
offset_bottom = 12.5
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Music"

[node name="SfxVolumeSlider" type="HSlider" parent="AudioControls"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 221.0
offset_right = 104.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0

[node name="ValueSfx" type="Label" parent="AudioControls/SfxVolumeSlider"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -11.0
offset_right = 99.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
text = "100"

[node name="Label" type="Label" parent="AudioControls/SfxVolumeSlider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -14.0
offset_right = -1.0
offset_bottom = 45.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Sfx
"

[node name="Text" type="RichTextLabel" parent="AudioControls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = 103.0
offset_right = 65.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 41
bbcode_enabled = true
text = "[center]Audio
"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -27.0
offset_right = -1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "Exit
"

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.447
anchor_right = 0.5
anchor_bottom = 0.447
offset_left = -78.0
offset_top = -79.656
offset_right = 1.0
offset_bottom = -48.656
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "Continue"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_b2xdw")
autoplay = true
bus = &"Pause Music"

[node name="sfxSlider" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_7bqeo")
bus = &"Gun"

[node name="SFXTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="timeout" from="OptionsManager/Save Interval" to="OptionsManager" method="_on_save_interval_timeout"]
[connection signal="value_changed" from="AudioControls/MasterVolumeSlider" to="OptionsManager" method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="AudioControls/MusicVolumeSlider" to="OptionsManager" method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="AudioControls/SfxVolumeSlider" to="OptionsManager" method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_continue_button_pressed"]
